# FlexyBoard

./: .gitignore  DesignReportTemplate.docx  README.md
FlexyBoard-Camera/: README.md  pyproject.toml  requirements.txt
FlexyBoard-Camera/configs/: before_geometry_reference.json  calibration.example.json  calibration.json  default.yaml  games_saved_geometry_summary.json  geometry_baseline_lock_test2.json  inner_from_outer_reference.json
FlexyBoard-Camera/debug_output/: manual_turn_geometry_20260413_100533.json
FlexyBoard-Camera/docs/: MOVE_AND_CAPTURE_EDGE_CASES.md  SERIAL_PROTOCOL.md
FlexyBoard-Camera/sample_data/: player2_response_sequence.example.json  player2_response_sequence_with_staging.future_example.json  stm32_move_sequence.txt
FlexyBoard-Camera/scripts/: analyze_board_and_diff.py  annotate_turn_geometry.py  build_before_geometry_reference.py  camera_preview.py  camera_probe.py  capture_on_pi_and_pull.sh  compare_saved_game_planners.py  detect_board_corners.py  detect_board_geometry.py  detect_board_regions.py  generate_chessboard_corner_report.py  generate_sample_images.py  generate_snake_moves.py  integration_harness.py  jog_stm32.py  render_offboard_layout_overlay.py  run_full_system_mac.sh  run_pi_software_bridge.py  run_turn_capture_analyze.py  run_turn_on_pi_and_pull.sh  run_turn_on_pi_save_only.sh  send_moves_from_file.py
FlexyBoard-Camera/tests/: conftest.py  test_board_detector.py  test_calibration.py  test_config_loading.py  test_diff_and_inference.py  test_end_turn_pipeline.py  test_motion_planner_regressions.py  test_piece_classifier.py  (+2 more)
(+249 files in other folders)
